...
      app:layout_constraintHorizontal_bias="0.1"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <ImageView
      android:id="@+id/border"
      android:layout_width="220dp"
      android:layout_height="280dp"
      android:layout_marginTop="20dp"
      app:layout_constraintHorizontal_bias="0.437"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
...
