...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MessageFragment"
      >


    <EditText
        android:id="@+id/subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/subject"
        android:textSize="24sp"
        android:maxLines="1"
        android:textColorHint="#BDBABA"
...
        android:inputType="text"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/message_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/add_a_message"
        android:inputType="text"
        android:minHeight="48dp"
...
