...
    android:text="@{viewModelMessage.subject}"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/message_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@{viewModelMessage.details}"
        android:textColor="@color/white"
        android:textSize="18sp"
...
